# python_web_task_8

./: authors.json  consumer_email.py  consumer_sms.py  main.py  models.py  producer.py  pyproject.toml  seed.py  tags.py
quotes_scraper/quotes_scraper/: items.py  pipelines.py  settings.py
quotes_scraper/quotes_scraper/spiders/: quotes_spider.py
